# dimos

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  MISSION_CONTROL_PLAN.md  MISSION_CONTROL_SPEC.md  pyproject.toml
.github/workflows/: fast-test.yml
autoresearch/: eval.py  optimizations.py  program.md
dimos/agents/: agent.py
dimos/agents/skills/: person_follow.py
dimos/agents2/skills/interpret_map/: OccupancyGridImage.py
dimos/control/: components.py  coordinator.py  hardware_interface.py  orchestrator.py
dimos/control/blueprints/: _hardware.py
dimos/control/tasks/: trajectory_task.py
dimos/core/: blueprints.py  daemon.py  docker_worker_manager.py  module_coordinator.py  test_cli_stop_status.py  test_daemon.py  test_e2e_daemon.py  test_per_run_logs.py  worker.py
dimos/e2e_tests/: conftest.py  dimos_cli_call.py  test_control_coordinator.py  test_dimsim_nav.py  test_scene_client.py  test_scene_editing.py
dimos/hardware/: so101_arm.py
dimos/hardware/manipulators/: spec.py
dimos/hardware/manipulators/piper/: backend.py
dimos/hardware/manipulators/xarm/: backend.py  xarm_blueprints.py
dimos/hardware/so101_utils/: so101_interface.py
dimos/manipulation/: manipulation_module.py  test_pick_and_place_unit.py
dimos/manipulation/dynamic_tracking/: aruco_tracker.py  dt_blueprint.py
dimos/mapping/: costmapper.py  costmapper_native.py
dimos/mapping/costmapper_rust/: Cargo.toml
dimos/mapping/costmapper_rust/src/: main.rs
dimos/memory/: stream.py  test_memory.py  test_projection.py
dimos/memory/impl/: test_sqlite.py
dimos/memory/sensor/: __init__.py  base.py  pickledir.py  sqlite.py  test_base.py
dimos/memory2/: __init__.py  architecture.md  backend.py  conftest.py  embed.py  filter.py  registry.py  stream.py  test_blobstore_integration.py  test_e2e.py  test_e2e_import.py  test_embedding.py  test_impl.py  test_module.py  test_registry.py  test_store.py  test_stream.py
dimos/memory2/blobstore/: base.py  file.py  sqlite.py
dimos/memory2/codecs/: __init__.py
dimos/memory2/impl/: README.md  memory.py  sqlite.py
dimos/memory2/notifier/: base.py  subject.py
dimos/memory2/observationstore/: sqlite.py
dimos/memory2/store/: __init__.py  sqlite.py
dimos/memory2/vectorstore/: base.py  sqlite.py
dimos/memory2/vis/: color.py  drawing.py  svg.py  test_drawing.py  type.py  utils.py
dimos/memory2/vis/drawing2d/: drawing2d.py  svg.py  test_drawing2d.py
dimos/memory2/vis/graph/: graph.py  svg.py  test_graph.py
dimos/memory2/vis/plot/: plot.py  svg.py  test_plot.py
dimos/memory2/vis/space/: svg.py  test_space.py
dimos/models/depth/: metric3d.py
dimos/models/segmentation/: __init__.py  edge_tam.py
dimos/msgs/nav_msgs/: OccupancyGrid.py
dimos/msgs/std_msgs/: Int8.py
dimos/msgs/vision_msgs/: Detection3D.py
dimos/navigation/: dimos_module_entrypoint.sh  rosnav.py  rosnav_docker.py
dimos/navigation/dynamic_map/: test_dynamic_map_e2e.py
dimos/navigation/dynamic_map/native/: dynamic_map_node.cpp
dimos/navigation/rosnav/: rosnav_module.py  test_rosnav_agentic.py
dimos/navigation/slam_map/: DESIGN.md  module.py  test_slam_map.py  test_slam_map_e2e.py
dimos/navigation/slam_map/native/: CMakeLists.txt  common  dynamic_mapper.cpp  dynamic_mapper.hpp  flake.nix  icp_odometry.cpp  icp_odometry.hpp  pose_graph.cpp  pose_graph.hpp  result  scan_context.cpp  scan_context.hpp  slam_map_node.cpp
dimos/navigation/smart_nav/: main.py
dimos/navigation/smart_nav/common/: pointcloud_filters.py
dimos/navigation/smart_nav/tests/: test_cross_wall_planning.py
dimos/perception/: object_scene_registration.py
dimos/perception/detection/: test_moduleDB.py
dimos/perception/detection2d/: module3D.py  moduleDB.py  moduleEmbeddingDB.py  spatial.py  test_module2d.py  test_replay.py  yolo_2d_det.py
dimos/protocol/pubsub/: rospubsub.py  rospubsub_conversion.py  test_pattern_sub.py  test_rospubsub.py
dimos/protocol/pubsub/impl/: lcmpubsub.py  test_lcmpubsub_patternsub.py
dimos/protocol/service/: test_system_configurator.py
dimos/protocol/service/system_configurator/: base.py
dimos/record/: test_record_replay.py
dimos/robot/: all_blueprints.py
dimos/robot/agilex/: piper_arm.py
dimos/robot/cli/: dimos.py
dimos/robot/lerobot/: so101_arm.py
dimos/robot/sim/: bridge.py  scene_client.py  tf_module.py
dimos/robot/unitree/: connection.py
dimos/robot/unitree/connection/: go2.py
dimos/robot/unitree/go2/: connection.py
dimos/robot/unitree_webrtc/: camera_module.py  rosnav.py  unitree_g1.py  unitree_g1_blueprints.py  unitree_go2_blueprints.py
dimos/simulation/unity/: module.py
dimos/spec/: test_utils.py  utils.py
dimos/stream/audio2/: base.py
dimos/stream/audio2/input/: test_microphone.py
dimos/stream/audio2/operators/: effects.py  test_examples.py
dimos/stream/audio2/output/: test_network.py
dimos/teleop/quest/: quest_extensions.py  quest_types.py
dimos/utils/: prompt.py  reactive.py
dimos/utils/cli/dio/: app.py
dimos/visualization/rerun/: bridge.py
dimos/web/templates/: mission_control.html
dimos/web/websocket_vis/: test_mission_control.py  websocket_vis_module.py
docker/navigation/: build.sh
docs/api/sensor_streams/: advanced_streams.md
docs/capabilities/memory/: index.md  index.py  plot.md
docs/development/simulation/: index.md  scene_editing.md  viewing.md
docs/usage/: native_modules.md
examples/scene_editing/: load_object.py  load_robot.py  load_scene.py  remove_object.py
hackathon/: LAYOUT_PROPOSAL.md
hackathon/notes/: FILES.md  PERCEPTION_AND_MEMORY.md  PLAN.md  README.md  SPEC.md  STATUS.md
installer/: installer.pyz.REMOVED.git-id
installer/build_scripts/: build_pyz.py
installer/build_scripts/support/: build_help.py  validate_names.py
installer/pyz_app/: __main__.py
installer/pyz_app/bundled_files/: pip_dependency_database.json
installer/pyz_app/phases/: phase00_user_questions.py
plans/: memory3.md
scripts/: run_inference.py
(+58 files in other folders)
